--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "earcut": "^2.2.4",
     "noisejs": "^2.1.0",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-slider": "^2.0.6",
     "three": "^0.155.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -50,6 +52,8 @@
   },
   "devDependencies": {
     "@types/node-sass": "^4.11.3",
+    "@types/react-color": "^3.0.6",
+    "@types/react-slider": "^1.3.1",
     "node-sass": "^7.0.3",
     "sass": "^1.66.1"
   }
