--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-slider": "^2.0.6",
+    "simplex-noise": "^4.0.1",
     "three": "^0.155.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
