add clouds, optimization, code improvements

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^18.2.7",
     "@types/three": "^0.155.1",
     "color": "^4.2.3",
+    "colord": "^2.9.3",
     "d3-geo-voronoi": "^2.0.1",
     "earcut": "^2.2.4",
     "noisejs": "^2.1.0",
