--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "planetgen",
-  "version": "0.1.0",
+  "name": "planetgen3d",
+  "version": "1.0.0",
+  "homepage": "https://B0G3.github.io/PlanetGen3D",
   "private": true,
   "dependencies": {
     "@react-three/drei": "^9.80.6",
@@ -29,7 +30,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -53,6 +56,7 @@
     "@types/node-sass": "^4.11.3",
     "@types/react-color": "^3.0.6",
     "@types/react-slider": "^1.3.1",
+    "gh-pages": "^6.1.0",
     "node-sass": "^7.0.3",
     "sass": "^1.66.1"
   }
